<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="new_task">New Task</string>
    <string name="profile">Profile</string>
    <string name="to_do_list">To-do list!</string>
    <string name="here_you_can_write_down_n_something_important_nor_make_a_schedule_for_ntomorrow">Here you can write down\n something important \nor make a schedule for \ntomorrow:)</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="sort_old">По времени</string>
    <string name="sort_alphabet">По алфавиту</string>
    <string name="sort_by_def">По умолчанию</string>
</resources>