<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardPageFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_board_picture"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/img1"
            android:contentDescription="@string/todo" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:dotsColor="@color/color_main"
            app:dotsCornerRadius="8dp"
            app:dotsSize="16dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="@color/teal_200"
            app:progressMode="true"
            />

        <TextView
            android:id="@+id/tv_board_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do_list"
            android:layout_marginTop="30dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_board_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/here_you_can_write_down_n_something_important_nor_make_a_schedule_for_ntomorrow"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <FrameLayout
            android:layout_marginTop="160dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/skip"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/next"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="60dp"
                android:layout_gravity="center"
                android:text="@string/start"
                android:visibility="gone"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>